<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ronnie"
                    android:layout_marginVertical="5dp"
                    android:layout_marginLeft="24dp"
                    app:civ_border_width="1dp"/>
                <TextView
                    android:id="@+id/complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:layout_gravity="center|right"
                    android:text="@string/add_routine"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:padding="12dp"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="12dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <!--height 0dp, cilpToPaddig false, padding bottom 160도 괜찮은듯? 고려해보기-->
            <!--  원래는 height = wrap_content -->
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/workout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_gravity="center"
                    android:text="TEST"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll1">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray_500"/>
                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/unit_toggle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:singleSelection="true"
                        app:selectionRequired="true"
                        app:checkedButton="@+id/kg">
                        <Button
                            android:id="@+id/kg"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:theme="@style/ToggleUnitStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/unit_kg" />
                        <Button
                            android:id="@+id/lb"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:theme="@style/ToggleUnitStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/unit_lbs"/>
                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Memo.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/memo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_memo"
                            android:inputType="textMultiLine"
                            android:maxLines="2" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="160dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/ll3"
                app:layout_constraintTop_toBottomOf="@+id/header" />
            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_set"
                    android:layout_height="wrap_content"
                    style="@style/AddDeleteButtonStyle"
                    android:text="@string/delete_set"
                    app:icon="@drawable/ic_delete"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_set"
                    android:layout_height="wrap_content"
                    style="@style/AddDeleteButtonStyle"
                    android:text="@string/add_set"
                    app:icon="@drawable/ic_add"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
